Added James3 instructions